rustdocs/errors/rust-bitcoin-units-src-amount-tests.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/units/src/amount/tests.rs:13:5
   |
13 | use super::*;
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/amount/tests.rs:9:5
  |
9 | use core::num::{NonZeroI64, NonZeroU64};
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `crate::result`
  --> ../rust-bitcoin/units/src/amount/tests.rs:16:12
   |
16 | use crate::result::NumOpResult;
   |            ^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `std::result`

error[E0425]: cannot find type `Amount` in this scope
  --> ../rust-bitcoin/units/src/amount/tests.rs:21:21
   |
21 | fn sat(sat: u64) -> Amount { Amount::from_sat(sat).unwrap() }
   |                     ^^^^^^ not found in this scope

error[E0425]: cannot find type `SignedAmount` in this scope
  --> ../rust-bitcoin/units/src/amount/tests.rs:24:23
   |
24 | fn ssat(ssat: i64) -> SignedAmount { SignedAmount::from_sat(ssat).unwrap...
   |                       ^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `Amount` in this scope
  --> ../rust-bitcoin/units/src/amount/tests.rs:27:35
   |
27 | fn res(n_sat: u64) -> NumOpResult<Amount> { NumOpResult::from(sat(n_sat)) }
   |                                   ^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
27 | fn res<Amount>(n_sat: u64) -> NumOpResult<Amount> { NumOpResult::from(sat(n_sat)) }
   |       ++++++++

error[E0425]: cannot find type `SignedAmount` in this scope
  --> ../rust-bitcoin/units/src/amount/tests.rs:30:36
   |
30 | ... -> NumOpResult<SignedAmount> { NumOpResult::from(ssat(n_sat)) }
   |                    ^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
30 | fn sres<SignedAmount>(n_sat: i64) -> NumOpResult<SignedAmount> { NumOpResult::from(ssat(n_sat)) }
   |        ++++++++++++++

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0425`.
